<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:suffixText=".wav"
        app:suffixTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fileNameInput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/file_name"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fileNameSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_switch_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_viewRight"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/timerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_switch_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/minutesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/minutes"
                android:inputType="numberSigned"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerButton"
                app:layout_constraintVertical_bias="0"
                android:autofillHints="" />

            <EditText
                android:id="@+id/secondsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/seconds"
                android:inputType="numberSigned"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerButton"
                app:layout_constraintVertical_bias="0"
                android:autofillHints="" />

            <Button
                android:id="@+id/timerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="recordAudio"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_viewLeft"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/recordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="recordAudio"
                android:text="@string/record"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stopRecordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="stopRecordAudio"
                android:text="@string/stop"
                app:layout_constraintVertical_bias="0.8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playAudio"
        android:layout_marginBottom="20dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>